--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,11 @@ body {
   padding: 40px 30px;
 }
 
+section {
+  margin: auto;
+  width: 60%;
+}
+
 h1, h2, h3, h4, h5, h6, p {
   color: #383838;
 }
@@ -69,5 +74,6 @@ header {
   background-image: url('../images/logo.svg');
   background-repeat: no-repeat;
   height: 60px;
-  margin: 5px 30px;
+  margin: auto;
+  width: 60%;
 }
