--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,7 @@ p {
   border-bottom: solid rgb(135, 97, 170) 2px;
 }
 
-.header-wrapper {
+.header-wrapper, footer {
   margin: auto;
   width: 60%;
 }
@@ -96,7 +96,9 @@ header {
   vertical-align: middle;
   float: right;
   border-right: solid #78e3ec 3px;
-  padding: 20px;
+  padding: 20px 30px 20px 20px;
+  float: right;
+  padding-right: 30px;
 }
 
 .role-nav ol {
