--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,11 +80,14 @@ header {
 }
 
 footer {
+  color: white;
   height: 120px;
   background-color: rgb(50, 17, 82);
-  z-index: 1;
-  margin: -30px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
   padding-bottom: 10px;
+  width: 100%;
 }
 
 .brand {
