Add padding for the first section due to change of sticky head behaviour

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,6 +72,10 @@ p, ul, li {
   border-bottom: solid rgb(135, 97, 170) 2px;
 }
 
+#heading-section {
+  margin-top: 40px;
+}
+
 .header-wrapper, .footer-wrapper {
   margin: auto;
   width: 60%;
