--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,16 +84,19 @@ p, ul, li {
 header {
   height: 120px;
   background-color: rgb(135, 97, 170);
-  z-index: 1;
   padding-top: 20px;
   width: 100%;
+  /* animation magic */
+  transition: all 0.4s ease-in-out
+  -webkit-transition: all 0.4s ease-in-out
+  -moz-transition: all 0.4s ease-in-out
+  z-index: 9999
   position: fixed;
   top: 0;
 }
 
 .shrink {
   height: 100px;
-  background-image: hide;
 }
 
 footer {
