Change header background to accessible color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,7 +83,7 @@ p, ul, li {
 
 header {
   height: 120px;
-  background-color: rgb(135, 97, 170);
+  background-color: #ced5f4;
   padding-top: 20px;
   width: 100%;
   /* animation magic */
