--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,7 +113,7 @@ footer {
 }
 
 .brand {
-  background-image: url('../images/logo.svg');
+  /*background-image: url('../images/logo.svg');*/
   background-repeat: no-repeat;
   height: 90px;
   width: 20%;
@@ -214,7 +214,7 @@ footer {
   font-weight: 900;
 }
 
-.role-nav-item a::after {
+.role-nav-item ul li::after {
   display: inline-block;
   color: #114757;
   content: '|';
