--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,10 +85,13 @@ p, ul, li {
   width: 60%;
 }
 
+.header-wrapper {
+  position: sticky;
+  height: 30px;
+}
+
 header {
-  height: 120px;
   background-color: #ced5f4;
-  padding-top: 20px;
   width: 100%;
   /* animation magic */
   transition: all 0.4s ease-in-out;
@@ -113,17 +116,14 @@ footer {
 }
 
 .brand {
-  /*background-image: url('../images/logo.svg');*/
-  background-repeat: no-repeat;
-  height: 90px;
   width: 20%;
   float: left;
 }
 
 .logo-1 {
   font-size: 0;
-  margin: 14px 0;
-  height: 56px;
+  height: 80px;
+  margin: 20px 0;
   position: relative;
   transition: height ease-in;
   width: 180px;
@@ -141,7 +141,7 @@ footer {
   background-repeat: no-repeat;
   background-size: contain;
   font-size: 0;
-  margin: 0;
+  margin-top: 20px;
   height: 100%;
   position: absolute;
   transform: translateZ(0) scale(1,1)!important;
@@ -192,7 +192,8 @@ footer {
   padding-left: 0;
   vertical-align: middle;
   float: right;
-  padding: 20px 30px 20px 20px;
+  margin-bottom: 10px;
+  padding: 0 30px;
 }
 
 .role-nav ol {
