--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,7 +82,7 @@ p, ul, li {
 
 .header-wrapper, .footer-wrapper {
   margin: auto;
-  width: 60%;
+  width: 100%;
 }
 
 .header-wrapper {
@@ -107,6 +107,8 @@ header {
   align-items: center;
   display: flex;
   justify-content: space-between;
+  margin: auto;
+  width: 60%;
 }
 
 footer {
