--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,7 +146,7 @@ footer {
   background-repeat: no-repeat;
   background-size: contain;
   font-size: 0;
-  margin-top: 20px;
+  margin-top: -15px;
   height: 100%;
   position: absolute;
   transform: translateZ(0) scale(1,1)!important;
@@ -201,7 +201,7 @@ footer {
   display: flex;
   float: right;
   line-height: 1.2em;
-  margin-bottom: 10px;
+  margin: 15px 0 0;
   position: relative;
 }
 
