--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -194,6 +194,17 @@ footer {
   }
 }
 
+/* Mobile logo */
+
+.logo-3 {
+  background-image: url('../images/logo-horizontal.svg');
+  background-repeat: no-repeat;
+  background-size: contain;
+  font-size: 0;
+  margin-top: -15px;
+  height: 100%;
+}
+
 .logo {
   min-height: 26px;
   line-height: 0;
@@ -239,10 +250,19 @@ footer {
 }
 
 @media screen and (max-width: 39.9375em) {
+  header {
+    display: none;
+  }
+
+  .mobile-brand {
+    align-content: center;
+  }
+
   .mobile-header {
   max-height: 100vh;
   overflow-y: scroll;
   background: #202329;
+  color: #FFFFFF;
   max-height: 100vh;
   padding-bottom: 56px;
   position: fixed;
