--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -203,7 +203,8 @@ footer {
   background-size: contain;
   display: block;
   font-size: 0;
-  margin-top: 25px;
+  margin-top: 30px;
+  padding-bottom: 20px;
   height: 100%;
   width: 150px;
 }
@@ -264,11 +265,10 @@ footer {
   .mobile-header {
   max-height: 100vh;
   overflow-y: scroll;
-  background: rgb(206,213,244);
-  background: linear-gradient(180deg, rgba(206,213,244,1) 0%, rgba(95,9,121,1) 9%, rgba(23,86,110,1) 99%);
-  color: #FFFFFF;
+  background: rgb(119,48,21);
+  background: linear-gradient(180deg, rgba(119,48,21,1) 0%, rgba(95,9,121,1) 27%, rgba(23,86,110,1) 99%);  color: #FFFFFF;
   max-height: 100vh;
-  padding-bottom: 56px;
+  padding-bottom: 20px;
   position: fixed;
   top: 0;
   width: 100%;
