--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,6 @@
 
 body {
   background-color: white;
-  margin: -10px;
 }
 
 .container {
@@ -33,7 +32,8 @@ h1, h2, h3, h4, h5, h6, p {
 }
 
 a {
-  color: #2e87a1
+  color: #2e87a1;
+  font-weight: 600;
 }
 
 h1 {
@@ -114,7 +114,8 @@ header {
 }
 
 footer {
-  background-color: #4b3d5a;
+  background: rgb(36,12,61);
+  background: linear-gradient(180deg, rgba(36,12,61,1) 0%, rgba(63,13,77,1) 57%, rgba(9,44,57,1) 99%);
   height: 75px;
   width: 100%;
   margin-top: auto;
