increase accessibility of links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,8 +32,9 @@ h1, h2, h3, h4, h5, h6, p {
 }
 
 a {
-  color: #2e87a1;
+  color: #1F596B;
   font-weight: 600;
+  text-decoration: underline;
 }
 
 h1 {
