--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,12 +115,23 @@ header {
 }
 
 footer {
-  background: rgb(36,12,61);
-  background: linear-gradient(180deg, rgba(36,12,61,1) 0%, rgba(63,13,77,1) 57%, rgba(9,44,57,1) 99%);
+  /*background: rgb(36,12,61);
+  background: linear-gradient(180deg, rgba(36,12,61,1) 0%, rgba(63,13,77,1) 57%, rgba(9,44,57,1) 99%);*/
   height: 75px;
   width: 100%;
   margin-top: auto;
   padding-top: 20px;
+
+  animation: pulse 5s infinite;
+}
+
+@keyframes pulse {
+  0% {
+    background-color: #001F3F;
+  }
+  100% {
+    background-color: #FF4136;
+  }
 }
 
 .footer-items {
