--- a/assets/css/compiled-style.css
+++ b/assets/css/compiled-style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  background-color: white;
+  background-color: #ffffff;
 }
 
 .container {
@@ -23,7 +23,7 @@ section:last-child {
 }
 
 .heading {
-  border-bottom: solid #8761aa 2px;
+  border-bottom: solid #240c3d 2px;
 }
 
 #heading-section {
@@ -31,16 +31,16 @@ section:last-child {
 }
 
 footer p {
-  color: white;
+  color: #ffffff;
 }
 
 h1, h2, h3, h4, h5, h6, p {
-  color: #383838;
+  color: #131430;
   font-family: "Molengo", sans-serif;
 }
 
 a {
-  color: #1F596B;
+  color: #17556e;
   font-weight: 500;
   text-decoration: underline;
 }
@@ -125,10 +125,10 @@ footer {
     background-color: #07445c;
   }
   90% {
-    background-color: #041739;
+    background-color: #08224e;
   }
   100% {
-    background-color: #200d75;
+    background-color: #19095e;
   }
 }
 .footer-items {
