modified:   assets/css/compiled-style.css

--- a/assets/css/compiled-style.css
+++ b/assets/css/compiled-style.css
@@ -91,12 +91,13 @@ p, ul, li {
   color: #e4e1eb;
 }
 
-.tabs > p, ul, li {
-  font-size: 20px;
+.tabs-title > a {
+  font-size: 16px;
 }
 
-.tabs-title > a:focus {
+.tabs-title > a:focus, .tabs-title > a[aria-selected=true] {
   background-color: #07445c;
+  border-radius: 20px 20px 0 0;
   color: #e4e1eb;
 }
 
