modified:   assets/css/compiled-style.css

--- a/assets/css/compiled-style.css
+++ b/assets/css/compiled-style.css
@@ -95,12 +95,20 @@ p, ul, li {
   font-size: 16px;
 }
 
-.tabs-title > a:focus, .tabs-title > a[aria-selected=true] {
-  background-color: #07445c;
+.tabs-title a {
+  border: solid teal 1px;
   border-radius: 20px 20px 0 0;
+}
+.tabs-title a :focus, .tabs-title a [aria-selected=true] {
+  background-color: #07445c;
   color: #e4e1eb;
 }
 
+/*.tabs-title > a:focus, .tabs-title>a[aria-selected=true]{
+  background-color: $dark-teal;
+  border-radius: 20px 20px 0 0;
+  color: $base-white;
+}*/
 footer {
   /*background: rgb(36,12,61);
   background: linear-gradient(180deg, rgba(36,12,61,1) 0%, rgba(63,13,77,1) 57%, rgba(9,44,57,1) 99%);*/
