--- a/assets/css/compiled-style.css
+++ b/assets/css/compiled-style.css
@@ -17,7 +17,8 @@ section {
   padding: 10px 5px 0;
   width: 60%;
 }
-section :last-child {
+
+section > :last-child {
   padding-bottom: 40px;
 }
 
