--- a/assets/css/compiled-style.css
+++ b/assets/css/compiled-style.css
@@ -109,6 +109,13 @@ p, ul, li {
   color: #e4e1eb;
 }
 
+.tnsm-card {
+  background-color: #b780cf;
+  padding: 20px;
+  border-radius: 0 10px 10px 0;
+  border-left: 5px solid #240c3d;
+}
+
 footer {
   /*background: rgb(36,12,61);
   background: linear-gradient(180deg, rgba(36,12,61,1) 0%, rgba(63,13,77,1) 57%, rgba(9,44,57,1) 99%);*/
