modified:   assets/css/compiled-style.css

--- a/assets/css/compiled-style.css
+++ b/assets/css/compiled-style.css
@@ -110,10 +110,10 @@ p, ul, li {
 }
 
 .tnsm-card {
-  background-color: #b780cf;
+  background-color: #d9cdf7;
   padding: 20px;
   border-radius: 0 10px 10px 0;
-  border-left: 5px solid #240c3d;
+  border-left: 5px solid #5f0979;
 }
 
 footer {
