--- a/assets/css/compiled-style.css
+++ b/assets/css/compiled-style.css
@@ -111,9 +111,10 @@ p, ul, li {
 
 .tnsm-card {
   background-color: #d9cdf7;
-  padding: 20px;
   border-radius: 0 10px 10px 0;
   border-left: 5px solid #5f0979;
+  margin-bottom: 15px;
+  padding: 20px 20px 0 20px;
 }
 
 footer {
