--- a/assets/css/compiled-style.css
+++ b/assets/css/compiled-style.css
@@ -114,7 +114,7 @@ p, ul, li {
   border-radius: 0 10px 10px 0;
   border-left: 5px solid #5f0979;
   margin-bottom: 15px;
-  padding: 20px 20px 0 20px;
+  padding: 20px 20px 10px 20px;
 }
 
 footer {
