modified:   assets/css/compiled-style.css 	modified:   index.html

--- a/assets/css/compiled-style.css
+++ b/assets/css/compiled-style.css
@@ -282,6 +282,11 @@ header {
   height: 100%;
   width: 150px;
 }
+@media screen and (max-width: 39.9375em) {
+  .logo-3 {
+    margin-top: -30px;
+  }
+}
 
 .logo {
   min-height: 26px;
@@ -354,17 +359,18 @@ li.role-nav-item {
     justify-content: space-around;
   }
 }
-@media screen and (min-width: 40em) {
-  .menu-icon {
+@media screen and (min-width: 39.94em) {
+  .hamburger-icon {
     display: none;
   }
 }
 @media screen and (max-width: 39.9375em) {
-  .menu-icon {
+  .hamburger-icon {
     background-image: url("../images/hamburger-plain.svg");
+    background-repeat: no-repeat;
     display: block;
-    height: 40px;
-    width: 40px;
+    height: 30px;
+    width: 30px;
   }
 }
 
