--- a/assets/css/compiled-style.css
+++ b/assets/css/compiled-style.css
@@ -368,9 +368,13 @@ li.role-nav-item {
   .hamburger-icon {
     background-image: url("../images/hamburger-plain.svg");
     background-repeat: no-repeat;
-    display: block;
-    height: 30px;
-    width: 30px;
+    height: 25px;
+    left: 0px;
+    margin: 20px;
+    position: absolute;
+    top: 4px;
+    width: 25px;
+    z-index: auto;
   }
 }
 
