modified:   assets/css/compiled-style.css modified:   index.html

--- a/assets/css/compiled-style.css
+++ b/assets/css/compiled-style.css
@@ -110,9 +110,9 @@ p, ul, li {
 }
 
 .tnsm-card {
-  background-color: #d9cdf7;
+  background-color: #eef0f8;
   border-radius: 0 10px 10px 0;
-  border-left: 5px solid #5f0979;
+  border-left: 5px solid #19095e;
   margin-bottom: 15px;
   padding: 20px 20px 10px 20px;
 }
