--- a/assets/css/compiled-style.css
+++ b/assets/css/compiled-style.css
@@ -82,6 +82,24 @@ p, ul, li {
   font-size: 38px;
 }
 
+.tnsm-button {
+  background-color: #07445c;
+  border: solid 3px #9240ad;
+  border-radius: 2em;
+  padding: 15px;
+  font-size: 20px;
+  color: #e4e1eb;
+}
+
+.tnsm-button:hover,
+.tnsm-button:active {
+  background-color: #17556e;
+}
+
+.tnsm-button:visited {
+  background-color: #504f99;
+}
+
 .full-width-card {
   width: 100%;
 }
