modified:   assets/css/compiled-style.css modified:   portfolio.html

--- a/assets/css/compiled-style.css
+++ b/assets/css/compiled-style.css
@@ -98,6 +98,10 @@ p, ul, li {
   background-color: #17556e;
 }
 
+.tnsm-button:active {
+  background-color: #ad0a82;
+}
+
 .full-width-card {
   width: 100%;
 }
