--- a/assets/css/compiled-style.css
+++ b/assets/css/compiled-style.css
@@ -14,12 +14,19 @@ body {
 
 section {
   margin: auto;
-  padding: 10px 5px 0;
+  padding: 10px 5px 20px;
   width: 60%;
+  border-bottom: solid 2px #d9cdf7;
+  margin-bottom: 20px;
 }
 
 section:last-of-type {
   padding-bottom: 40px;
+  border-bottom: none;
+}
+
+section:first-of-type {
+  border-bottom: none;
 }
 
 .heading {
