modified:   assets/css/compiled-style.css modified:   component-updates.html

--- a/assets/css/compiled-style.css
+++ b/assets/css/compiled-style.css
@@ -404,5 +404,9 @@ li.role-nav-item {
     z-index: auto;
   }
 }
+.media-frame {
+  max-width: 650px;
+  margin: auto;
+}
 
 /*# sourceMappingURL=compiled-style.css.map */
