--- a/assets/css/compiled-style.css
+++ b/assets/css/compiled-style.css
@@ -222,6 +222,16 @@ footer {
   width: 60%;
 }
 
+.contact-details {
+  float: right;
+  width: 30%;
+  color: white;
+}
+
+.copyright {
+  padding-right: 30px;
+}
+
 .header-wrapper, .footer-wrapper {
   margin: auto;
   width: 100%;
