--- a/assets/css/compiled-style.css
+++ b/assets/css/compiled-style.css
@@ -295,14 +295,14 @@ header {
 }
 
 .logo-1-background {
-  background-image: url("../images/logo.svg");
+  background-image: url("../images/moth-logo-large.svg");
   background-repeat: no-repeat;
   background-size: contain;
   display: inline-block;
 }
 
 .logo-2 {
-  background-image: url("../images/logo-horizontal.svg");
+  background-image: url("../images/moth-logo-horizontal-dark.svg");
   background-repeat: no-repeat;
   background-size: contain;
   font-size: 0;
@@ -343,7 +343,7 @@ header {
 
 /* Mobile logo */
 .logo-3 {
-  background-image: url("../images/logo-horizontal-white.svg");
+  background-image: url("../images/moth-logo-horizontal-white.svg");
   background-repeat: no-repeat;
   background-size: contain;
   display: block;
