--- a/assets/css/compiled-style.css
+++ b/assets/css/compiled-style.css
@@ -111,6 +111,7 @@ p, ul, li {
   background-color: #07445c;
   border: solid 3px #9240ad;
   border-radius: 2em;
+  box-shadow: 2px 4px;
   padding: 15px;
   font-size: 20px;
   color: #e4e1eb;
@@ -124,7 +125,8 @@ p, ul, li {
 }
 
 .tnsm-button:active {
-  border: solid 5px #ad0a82;
+  border: solid 3px #ad0a82;
+  box-shadow: 0px 0px;
 }
 
 .card-divider {
