Add pointer cursor

--- a/assets/css/compiled-style.css
+++ b/assets/css/compiled-style.css
@@ -122,6 +122,7 @@ p, ul, li {
 .tnsm-button:focus,
 .tnsm-button:active {
   background-color: #17556e;
+  cursor: pointer;
 }
 
 .tnsm-button:hover,
