--- a/assets/css/compiled-style.css
+++ b/assets/css/compiled-style.css
@@ -184,6 +184,7 @@ footer {
   height: 75px;
   width: 100%;
   margin-top: auto;
+  overflow-x: hidden;
   padding-top: 20px;
   animation: pulse 30s infinite;
 }
@@ -230,6 +231,11 @@ footer {
   margin: auto;
   width: 60%;
 }
+@media screen and (max-width: 39.9375em) {
+  .footer-items {
+    margin: 0 20px;
+  }
+}
 
 .contact-details {
   float: right;
@@ -237,6 +243,11 @@ footer {
 }
 .contact-details p a {
   color: white;
+}
+@media screen and (max-width: 39.9375em) {
+  .contact-details {
+    font-size: 14px;
+  }
 }
 
 .copyright {
