--- a/assets/css/compiled-style.css
+++ b/assets/css/compiled-style.css
@@ -184,7 +184,6 @@ footer {
   height: 75px;
   width: 100%;
   margin-top: auto;
-  overflow-x: hidden;
   padding-top: 20px;
   animation: pulse 30s infinite;
 }
@@ -223,6 +222,9 @@ footer {
   100% {
     background-color: #19095e;
   }
+  @media screen and (max-width: 39.9375em) {
+    overflow-x: hidden;
+  }
 }
 .footer-items {
   align-items: center;
@@ -231,12 +233,12 @@ footer {
   margin: auto;
   width: 60%;
 }
-
 @media screen and (max-width: 39.9375em) {
   .footer-items {
     margin: 0 20px;
   }
 }
+
 .contact-details {
   float: right;
   width: 30%;
