--- a/assets/css/compiled-style.css
+++ b/assets/css/compiled-style.css
@@ -187,6 +187,12 @@ footer {
   padding-top: 20px;
   animation: pulse 30s infinite;
 }
+@media screen and (max-width: 39.9375em) {
+  footer {
+    height: 100px;
+    overflow-x: hidden;
+  }
+}
 
 @keyframes pulse {
   0% {
@@ -221,10 +227,6 @@ footer {
   }
   100% {
     background-color: #19095e;
-  }
-  @media screen and (max-width: 39.9375em) {
-    height: 100px;
-    overflow-x: hidden;
   }
 }
 .footer-items {
