--- a/assets/css/compiled-style.css
+++ b/assets/css/compiled-style.css
@@ -495,6 +495,17 @@ li.role-nav-item {
     z-index: auto;
   }
 }
+.hero {
+  overflow: hidden;
+  width: 100%;
+}
+
+.hero-image {
+  background-image: "../assets/images/white-horse-trail.jpg";
+  height: 100%;
+  width: auto;
+}
+
 .media-frame {
   max-width: 650px;
   margin: auto;
