--- a/assets/css/compiled-style.css
+++ b/assets/css/compiled-style.css
@@ -501,7 +501,7 @@ li.role-nav-item {
 }
 
 .hero-image {
-  background-image: "../assets/images/white-horse-trail.jpg";
+  background-image: "assets/images/white-horse-trail.jpg";
   height: 100%;
   width: auto;
 }
