--- a/assets/css/compiled-style.css
+++ b/assets/css/compiled-style.css
@@ -511,12 +511,12 @@ li.role-nav-item {
 .hero {
   overflow: hidden;
   margin-top: 85px;
+  max-width: 1200px;
   width: 100%;
 }
 @media screen and (max-width: 39.9375em) {
   .hero {
     margin-top: 25px;
-    min-width: 338px;
   }
 }
 
@@ -536,6 +536,7 @@ li.role-nav-item {
   background-color: #131430;
   opacity: 80%;
   padding: 40px;
+  min-width: 338px;
   width: 80%;
 }
 
