--- a/assets/css/compiled-style.css
+++ b/assets/css/compiled-style.css
@@ -519,6 +519,47 @@ li.role-nav-item {
     z-index: auto;
   }
 }
+.mobile-navigation {
+  order: 3;
+  width: 100%;
+}
+
+.mobile-nav-items {
+  max-height: 0;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+  top: 56px;
+  transition: max-height 0.5s ease-in-out;
+  width: 100%;
+}
+
+.mobile-navigation .mobile-nav-checkbox {
+  display: block;
+  position: absolute;
+  top: -9999px;
+}
+
+.mobile-navigation ul {
+  font-size: 1rem;
+  line-height: 1.5rem;
+  margin: 0;
+  padding: 0;
+}
+
+.mobile-navigation ul li {
+  font-size: 0.3rem;
+  margin: 0;
+  padding: 14px 18px;
+}
+
+.mobile-navigation ul a {
+  color: #fff;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  transition: color 0.25s ease;
+}
+
 .hero {
   overflow: hidden;
   margin-top: 85px;
