--- a/assets/css/compiled-style.css
+++ b/assets/css/compiled-style.css
@@ -205,6 +205,35 @@ p, ul, li {
   padding: 20px 20px 10px 20px;
 }
 
+.flex-justify-container {
+  background-color: #eef0f8;
+  display: flex;
+  min-height: 250px;
+}
+
+.flex-justify-item {
+  background-color: #17556e;
+  color: #ad0a82;
+  font-size: 1.5rem;
+  min-width: 200px;
+  min-height: 200px;
+}
+.flex-justify-item .flex-demo-start {
+  justify-content: flex-start;
+}
+.flex-justify-item .flex-demo-end {
+  justify-content: flex-end;
+}
+.flex-justify-item .flex-demo-center {
+  justify-content: center;
+}
+.flex-justify-item .flex-demo-space-around {
+  justify-content: space-around;
+}
+.flex-justify-item .flex-demo-space-between {
+  justify-content: space-between;
+}
+
 footer {
   /*background: rgb(36,12,61);
   background: linear-gradient(180deg, rgba(36,12,61,1) 0%, rgba(63,13,77,1) 57%, rgba(9,44,57,1) 99%);*/
@@ -511,7 +540,7 @@ li.role-nav-item {
     background-repeat: no-repeat;
     cursor: pointer;
     height: 30px;
-    left: 0px;
+    left: 10px;
     margin: 20px;
     position: absolute;
     top: 0;
