--- a/assets/css/compiled-style.css
+++ b/assets/css/compiled-style.css
@@ -214,6 +214,7 @@ p, ul, li {
 
 .flex-justify-item {
   background-color: #17556e;
+  border: solid 2px #ad0a82;
   color: #ad0a82;
   font-size: 1.5rem;
   height: 200px;
