update flex demo

--- a/assets/css/compiled-style.css
+++ b/assets/css/compiled-style.css
@@ -215,7 +215,7 @@ p, ul, li {
 .flex-justify-item {
   background-color: #17556e;
   border: solid 2px #ad0a82;
-  color: #ad0a82;
+  color: #eef0f8;
   font-size: 2rem;
   font-weight: 900;
   height: 150px;
