--- a/assets/css/compiled-style.css
+++ b/assets/css/compiled-style.css
@@ -224,6 +224,7 @@ p, ul, li {
   font-size: 2rem;
   font-weight: 900;
   height: 150px;
+  justify-content: center;
   padding: auto;
   text-align: center;
   width: 150px;
