--- a/assets/css/compiled-style.css
+++ b/assets/css/compiled-style.css
@@ -517,7 +517,7 @@ header {
   border-right: none;
 }
 
-.role-nav-item a {
+.role-nav-item a .mobile-navigation-items a {
   color: #ffffff;
   font-size: 1.2rem;
   font-weight: 500;
@@ -623,6 +623,16 @@ li.role-nav-item {
   transition: color 0.25s ease;
 }
 
+@media screen and (max-width: 39.9375em) {
+  .mobile-navigation-container {
+    display: flex;
+    justify-content: center;
+  }
+
+  .mobile-navigation-items {
+    padding: 10px 20px 0;
+  }
+}
 .hero {
   overflow: hidden;
   margin-top: 85px;
